--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -47,6 +47,10 @@ endmenu
 
 source "drivers/video/backlight/Kconfig"
 
+menu "Rockchip Misc Video driver"
+source "drivers/video/rockchip/Kconfig"
+endmenu
+
 config VGASTATE
        tristate
        default n
