rk3588: dts: Add HDMI audio output
Signed-off-by: Detlev Casanova <detlev.casanova@collabora.com>

--- a/arch/arm64/boot/dts/rockchip/rk3588s.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588s.dtsi
@@ -1560,6 +1560,7 @@
 		rockchip,vo1_grf = <&vo1_grf>;
 		phys = <&hdptxphy_hdmi0>;
 		phy-names = "hdmi";
+		#sound-dai-cells = <0>;
 		status = "disabled";
 
 		ports {
