--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,7 @@ stages:
                        -m RTW89_PCI -m RTW89_8825B -m RTW89_8852BE
                        -m BINFMT_MISC
                        -e ROCKCHIP_MPP_SERVICE -e ROCKCHIP_MPP_RKVDEC2
+                       -e SND_SOC_ROCKCHIP_HDMI
     - make -j$(nproc) $ADDITIONAL_BUILD_CMD bindeb-pkg
     - mkdir artifacts && dcmd mv ../*.changes artifacts/
   artifacts:
